[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/SubEntry.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/Close.svg" type="Texture" id=2]

[node name="SubEntry" type="HBoxContainer" groups=[
"sub_entry",
]]
margin_right = 165.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActorButton" type="OptionButton" parent="."]
margin_right = 75.0
margin_bottom = 38.0
rect_min_size = Vector2( 75, 0 )
hint_tooltip = "Changes the actor that says the dialogue.
You can use (Alt+Bracket left) or (Alt+Bracket right) to change the actor rapidly"
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 3
enabled_focus_mode = 1
text = "Actor"
align = 2

[node name="SubText" type="LineEdit" parent="."]
margin_left = 79.0
margin_right = 137.0
margin_bottom = 38.0
size_flags_horizontal = 3
caret_blink = true

[node name="DeleteBtn" type="Button" parent="."]
margin_left = 141.0
margin_right = 185.0
margin_bottom = 38.0
hint_tooltip = "(Alt+Backspace)
Delete entry"
focus_mode = 0
icon = ExtResource( 2 )
flat = true

[connection signal="pressed" from="DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
